# FATE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: animationSelector.h  animator.h  camera.h  constants.h  downloadManager.h  fate.h  meshSelector.h  model.h  modelSelector.h  renderable.h  renderer.h  shader.h  viewport.h
shaders/: fragment.glsl  vertex.glsl
src/: animationSelector.cpp  animator.cpp  camera.cpp  downloadManager.cpp  fate.cpp  main.cpp  meshSelector.cpp  model.cpp  modelSelector.cpp  renderable.cpp  renderer.cpp  shader.cpp  stb_image_write.cpp  viewport.cpp
